# codeshot

./: .dockerignore  .env.example  .gitignore  Dockerfile  RAILWAY_DEPLOYMENT.md  README.md  main.py  pyproject.toml  requirements.txt  start.sh  test_deployment.sh
config/: constants.py  logging_config.py
fonts/: __init__.py  config.py
src/: __init__.py
src/core/: __init__.py  generator.py  renderer.py
src/effects/: __init__.py  reflections.py  shadows.py  special.py
src/frames/: __init__.py  macos.py  windows.py
src/utils/: __init__.py  backgrounds.py  fonts.py  http.py  validation.py
tests/: conftest.py  test_generator.py  test_themes.py
