[project]
name = "codeshot"
version = "1.0.0"
description = "Beautiful code screenshot generator with themes, effects, and professional styling"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Codeshot Team", email = "ayyan.sameer.shaikh.eren@gmail.com"}
]
keywords = ["code", "screenshot", "image", "generator", "syntax-highlighting"]
dependencies = [
    "beautifulsoup4>=4.13.4",
    "dotenv>=0.9.9",
    "fastmcp>=2.11.2",
    "markdownify>=1.1.0",
    "pillow>=11.3.0",
    "python-dotenv>=1.1.1",
    "readabilipy>=0.3.0",
    "numpy>=1.26.0",
    "opencv-python-headless>=4.8.0",
    "pytesseract>=0.3.10",
    "pygments>=2.18.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "pytest>=8.4.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
]

[project.scripts]
codeshot = "main:main"

[project.urls]
Homepage = "https://github.com/codeshot-team/codeshot"
Repository = "https://github.com/codeshot-team/codeshot"
Documentation = "https://docs.codeshot.dev"
"Bug Tracker" = "https://github.com/codeshot-team/codeshot/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "config", "fonts"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\\.pyi?$'
extend-exclude = '''
(
  ^/\.venv
  | ^/venv
  | ^/build
  | ^/dist
  | ^/\.git
  | ^/__pycache__
  | ^/\.pytest_cache
  | ^/\.mypy_cache
)
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["src", "config", "fonts"]
combine_as_imports = true
skip = [".venv", "venv", "build", "dist"]

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503"]
exclude = [".venv", "venv", "build", "dist", ".git", "__pycache__", ".pytest_cache"]

[tool.mypy]
python_version = "3.11"
mypy_path = ["src"]
ignore_missing_imports = true
pretty = true
warn_unused_ignores = true
warn_redundant_casts = true
show_error_codes = true
exclude = '(^/\.venv|^/venv|^/build|^/dist|^/\.mypy_cache|^/\.pytest_cache|^/__pycache__)'
